refactor bash and powershell scripts